2008-03-04  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/Makefile.am:
	* flumotion/wizard/interfaces.py:
	Add a new file with wizard plugin interfaces:
	- IProductionPlugin
	- IEncoderPlugin
	- IHTTPConsumerPlugin
	
	* flumotion/component/encoders/jpeg/jpeg_wizard.py:
	* flumotion/component/encoders/smoke/smoke_wizard.py:
	* flumotion/component/encoders/speex/speex_wizard.py:
	* flumotion/component/encoders/theora/theora_wizard.py:
	* flumotion/component/encoders/vorbis/vorbis_wizard.py:
	* flumotion/component/plugs/cortado/cortado_wizard.py:
	* flumotion/component/producers/audiotest/audiotest_wizard.py:
	* flumotion/component/producers/bttv/bttv_wizard.py:
	* flumotion/component/producers/firewire/firewire_wizard.py:
	* flumotion/component/producers/soundcard/soundcard_wizard.py:
	* flumotion/component/producers/videotest/videotest_wizard.py:
	* flumotion/component/producers/webcam/webcam_wizard.py:
	Mark the plugin steps as implementing one of the three added interfaces
	
	* flumotion/wizard/conversionsteps.py:
	* flumotion/wizard/productionsteps.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer_wizard.py:
	Add FIXME's so we remember to check the interfaces in the future

	Fixes #858

2008-03-04  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/interfaces.py: General maintainance:
	- Remove self from arguments
	- add @param to missing parameters
	- Add two empty new lines between classes (PEP-8)
	- Remove initial newline in docstring (PEP-8)
	- Remove unnecessary pass statements

2008-03-03  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/greeter.py (Greeter.__init__): Fix the height of the
	greeter to avoid re-sizing it later on.
	Hopefully this will make me clear the list of recent connections by mistakes
	less times.
	
	* flumotion/wizard/productionsteps.py (ProductionStep._verify): Un-bitrot,
	- wait for all producers to be loaded before trying to figure out if 
	  something should be prevented